[android] Merge Android Studio Hedgehog Beta 5
GitOrigin-RevId: 0bfb0a92b3dd65c973968ef46fd840ddd4bc67a6