@@ -15,16 +15,10 @@
  */
 package com.android.tools.idea.run.deployment;
 
-import com.android.sdklib.AndroidVersion;
-import com.android.tools.idea.flags.StudioFlags;
 import com.android.tools.idea.run.AndroidDevice;
-import com.android.tools.idea.run.DeploymentApplicationService;
 import com.android.tools.idea.run.LaunchCompatibility;
 import com.android.tools.idea.run.LaunchableAndroidDevice;
 import com.google.common.annotations.VisibleForTesting;
-import com.google.common.util.concurrent.Futures;
-import com.google.common.util.concurrent.ListenableFuture;
-import com.google.common.util.concurrent.MoreExecutors;
 import com.intellij.execution.runners.ExecutionUtil;
 import com.intellij.icons.AllIcons;
 import com.intellij.openapi.project.Project;
@@ -34,7 +28,7 @@ import java.nio.file.Path;
 import java.time.Instant;
 import java.util.ArrayList;
 import java.util.Collection;
-import java.util.Collections;
+import java.util.List;
 import java.util.Objects;
 import java.util.Optional;
 import javax.swing.Icon;
@@ -45,10 +39,13 @@ import org.jetbrains.annotations.Nullable;
  * A virtual device. If it's in the Android Virtual Device Manager Device.myKey is a VirtualDevicePath and myNameKey is not null. If not,
  * Device.myKey may be a VirtualDevicePath, VirtualDeviceName, or SerialNumber depending on what the IDevice returns and myNameKey is null.
  */
-public final class VirtualDevice extends Device {
+public final class VirtualDevice implements Device {
   private static final Icon ourPhoneIcon = StudioIcons.DeviceExplorer.VIRTUAL_DEVICE_PHONE;
   private static final Icon ourWearIcon = StudioIcons.DeviceExplorer.VIRTUAL_DEVICE_WEAR;
   private static final Icon ourTvIcon = StudioIcons.DeviceExplorer.VIRTUAL_DEVICE_TV;
+
+  @NotNull
+  private final Key myKey;
 
   /**
    * The virtual device names match with ConnectedDevices that don't support the avd path emulator console subcommand added to the emulator
@@ -56,59 +53,96 @@ public final class VirtualDevice extends Device {
    */
   private final @Nullable VirtualDeviceName myNameKey;
 
+  @NotNull
+  private final Type myType;
+
+  @NotNull
+  private final LaunchCompatibility myLaunchCompatibility;
+
+  @Nullable
+  private final Instant myConnectionTime;
+
+  @NotNull
+  private final String myName;
+
   private final @NotNull Collection<Snapshot> mySnapshots;
-  private final boolean mySelectDeviceSnapshotComboBoxSnapshotsEnabled;
+
+  @NotNull
+  private final AndroidDevice myAndroidDevice;
+
+  private VirtualDevice(@NotNull Builder builder) {
+    assert builder.myKey != null;
+    myKey = builder.myKey;
+
+    myNameKey = builder.myNameKey;
+    myType = builder.myType;
+    myLaunchCompatibility = builder.myLaunchCompatibility;
+    myConnectionTime = builder.myConnectionTime;
+
+    assert builder.myName != null;
+    myName = builder.myName;
+
+    mySnapshots = new ArrayList<>(builder.mySnapshots);
+
+    assert builder.myAndroidDevice != null;
+    myAndroidDevice = builder.myAndroidDevice;
+  }
 
   @NotNull
   public static VirtualDevice newConnectedDevice(@NotNull ConnectedDevice connectedDevice,
                                                  @NotNull KeyToConnectionTimeMap map,
                                                  @Nullable VirtualDevice virtualDevice) {
-    Device device;
     VirtualDeviceName nameKey;
+    Device device;
 
     if (virtualDevice == null) {
-      device = connectedDevice;
       nameKey = null;
+      device = connectedDevice;
     }
     else {
-      device = virtualDevice;
       nameKey = virtualDevice.myNameKey;
+      device = virtualDevice;
     }
 
-    Key key = device.getKey();
+    var key = device.key();
 
     return new Builder()
-      .setName(device.getName())
-      .setLaunchCompatibility(connectedDevice.getLaunchCompatibility())
       .setKey(key)
-      .setConnectionTime(map.get(key))
-      .setAndroidDevice(connectedDevice.getAndroidDevice())
       .setNameKey(nameKey)
-      .addAllSnapshots(device.getSnapshots())
-      .setType(device.getType())
+      .setType(device.type())
+      .setLaunchCompatibility(connectedDevice.launchCompatibility())
+      .setConnectionTime(map.get(key))
+      .setName(device.name())
+      .addAllSnapshots(device.snapshots())
+      .setAndroidDevice(connectedDevice.androidDevice())
       .build();
   }
 
   static final class Builder extends Device.Builder {
     private @Nullable VirtualDeviceName myNameKey;
     private final @NotNull Collection<Snapshot> mySnapshots = new ArrayList<>();
-    private boolean mySelectDeviceSnapshotComboBoxSnapshotsEnabled = StudioFlags.SELECT_DEVICE_SNAPSHOT_COMBO_BOX_SNAPSHOTS_ENABLED.get();
-
-    @NotNull
-    Builder setName(@NotNull String name) {
-      myName = name;
-      return this;
-    }
-
-    @NotNull
-    Builder setLaunchCompatibility(LaunchCompatibility launchCompatibility) {
-      myLaunchCompatibility = launchCompatibility;
-      return this;
-    }
 
     @NotNull
     Builder setKey(@NotNull Key key) {
       myKey = key;
+      return this;
+    }
+
+    @NotNull
+    Builder setNameKey(@Nullable VirtualDeviceName nameKey) {
+      myNameKey = nameKey;
+      return this;
+    }
+
+    @NotNull
+    Builder setType(@NotNull Type type) {
+      myType = type;
+      return this;
+    }
+
+    @NotNull
+    Builder setLaunchCompatibility(@NotNull LaunchCompatibility launchCompatibility) {
+      myLaunchCompatibility = launchCompatibility;
       return this;
     }
 
@@ -120,14 +154,8 @@ public final class VirtualDevice extends Device {
     }
 
     @NotNull
-    Builder setAndroidDevice(@NotNull AndroidDevice androidDevice) {
-      myAndroidDevice = androidDevice;
-      return this;
-    }
-
-    @NotNull
-    Builder setNameKey(@Nullable VirtualDeviceName nameKey) {
-      myNameKey = nameKey;
+    Builder setName(@NotNull String name) {
+      myName = name;
       return this;
     }
 
@@ -145,15 +173,8 @@ public final class VirtualDevice extends Device {
     }
 
     @NotNull
-    @VisibleForTesting
-    Builder setSelectDeviceSnapshotComboBoxSnapshotsEnabled(boolean selectDeviceSnapshotComboBoxSnapshotsEnabled) {
-      mySelectDeviceSnapshotComboBoxSnapshotsEnabled = selectDeviceSnapshotComboBoxSnapshotsEnabled;
-      return this;
-    }
-
-    @NotNull
-    Builder setType(@NotNull Type type) {
-      myType = type;
+    Builder setAndroidDevice(@NotNull AndroidDevice androidDevice) {
+      myAndroidDevice = androidDevice;
       return this;
     }
 
@@ -164,100 +185,123 @@ public final class VirtualDevice extends Device {
     }
   }
 
-  private VirtualDevice(@NotNull Builder builder) {
-    super(builder);
-
-    myNameKey = builder.myNameKey;
-    mySnapshots = new ArrayList<>(builder.mySnapshots);
-    mySelectDeviceSnapshotComboBoxSnapshotsEnabled = builder.mySelectDeviceSnapshotComboBoxSnapshotsEnabled;
-  }
-
-  @NotNull
-  public Optional<VirtualDeviceName> getNameKey() {
-    return Optional.ofNullable(myNameKey);
-  }
-
   void coldBoot(@NotNull Project project) {
-    ((LaunchableAndroidDevice)getAndroidDevice()).coldBoot(project);
+    ((LaunchableAndroidDevice)myAndroidDevice).coldBoot(project);
   }
 
   void quickBoot(@NotNull Project project) {
-    ((LaunchableAndroidDevice)getAndroidDevice()).quickBoot(project);
+    ((LaunchableAndroidDevice)myAndroidDevice).quickBoot(project);
   }
 
   void bootWithSnapshot(@NotNull Project project, @NotNull Path snapshot) {
-    ((LaunchableAndroidDevice)getAndroidDevice()).bootWithSnapshot(project, snapshot.toString());
+    ((LaunchableAndroidDevice)myAndroidDevice).bootWithSnapshot(project, snapshot.toString());
   }
 
   @NotNull
   @Override
-  Icon getIcon() {
-    var icon = switch (getType()) {
+  public Key key() {
+    return myKey;
+  }
+
+  @NotNull
+  Optional<VirtualDeviceName> nameKey() {
+    return Optional.ofNullable(myNameKey);
+  }
+
+  @Deprecated
+  @NotNull
+  public Optional<VirtualDeviceName> getNameKey() {
+    return nameKey();
+  }
+
+  @NotNull
+  @Override
+  public Icon icon() {
+    var icon = switch (myType) {
       case PHONE -> ourPhoneIcon;
       case WEAR -> ourWearIcon;
       case TV -> ourTvIcon;
     };
 
-    if (isConnected()) {
+    if (connected()) {
       icon = ExecutionUtil.getLiveIndicator(icon);
     }
 
-    return switch (getLaunchCompatibility().getState()) {
+    return switch (myLaunchCompatibility.getState()) {
       case OK -> icon;
       case WARNING -> new LayeredIcon(icon, AllIcons.General.WarningDecorator);
       case ERROR -> new LayeredIcon(icon, StudioIcons.Common.ERROR_DECORATOR);
     };
   }
 
+  @NotNull
   @Override
   public boolean isConnected() {
     return getConnectionTime() != null;
   }
 
+  public Type type() {
+    return myType;
+  }
+
   @NotNull
   @Override
-  Collection<Snapshot> getSnapshots() {
+  public LaunchCompatibility launchCompatibility() {
+    return myLaunchCompatibility;
+  }
+
+  @Override
+  public boolean connected() {
+    return myConnectionTime != null;
+  }
+
+  @Nullable
+  @Override
+  public Instant connectionTime() {
+    return myConnectionTime;
+  }
+
+  @NotNull
+  @Override
+  public String name() {
+    return myName;
+  }
+
+  @NotNull
+  @Override
+  public Collection<Snapshot> snapshots() {
     return mySnapshots;
   }
 
   @NotNull
   @Override
-  public Target getDefaultTarget() {
-    if (!mySelectDeviceSnapshotComboBoxSnapshotsEnabled) {
-      return new QuickBootTarget(getKey());
+  public Target defaultTarget() {
+    if (connected()) {
+      return new RunningDeviceTarget(myKey);
     }
 
-    if (isConnected()) {
-      return new RunningDeviceTarget(getKey());
-    }
-
-    return new QuickBootTarget(getKey());
+    return new QuickBootTarget(myKey);
   }
 
   @NotNull
   @Override
-  Collection<Target> getTargets() {
-    if (!mySelectDeviceSnapshotComboBoxSnapshotsEnabled) {
-      return Collections.singletonList(new QuickBootTarget(getKey()));
-    }
-
-    if (isConnected()) {
-      return Collections.singletonList(new RunningDeviceTarget(getKey()));
+  public Collection<Target> targets() {
+    if (connected()) {
+      return List.of(new RunningDeviceTarget(myKey));
     }
 
     if (mySnapshots.isEmpty()) {
-      return Collections.singletonList(new QuickBootTarget(getKey()));
+      return List.of(new QuickBootTarget(myKey));
     }
 
     Collection<Target> targets = new ArrayList<>(2 + mySnapshots.size());
-    Key deviceKey = getKey();
 
-    targets.add(new ColdBootTarget(deviceKey));
-    targets.add(new QuickBootTarget(deviceKey));
+    targets.add(new ColdBootTarget(myKey));
+    targets.add(new QuickBootTarget(myKey));
 
     mySnapshots.stream()
       .map(Snapshot::getDirectory)
-      .map(snapshotKey -> new BootWithSnapshotTarget(deviceKey, snapshotKey))
+      .map(snapshotKey -> new BootWithSnapshotTarget(myKey, snapshotKey))
       .forEach(targets::add);
 
     return targets;
@@ -265,17 +309,13 @@ public final class VirtualDevice extends Device {
 
   @NotNull
   @Override
-  ListenableFuture<AndroidVersion> getAndroidVersionAsync() {
-    Object androidDevice = getAndroidDevice();
+  public AndroidDevice androidDevice() {
+    return myAndroidDevice;
+  }
 
-    if (androidDevice instanceof LaunchableAndroidDevice) {
-      return Futures.immediateFuture(((LaunchableAndroidDevice)androidDevice).getAvdInfo().getAndroidVersion());
-    }
-
-    var service = DeploymentApplicationService.getInstance();
-
-    // noinspection UnstableApiUsage
-    return Futures.transformAsync(getDdmlibDeviceAsync(), service::getVersion, MoreExecutors.directExecutor());
+  @Override
+  public int hashCode() {
+    return Objects.hash(myKey, myNameKey, myType, myLaunchCompatibility, myConnectionTime, myName, mySnapshots, myAndroidDevice);
   }
 
   @Override
@@ -284,27 +324,19 @@ public final class VirtualDevice extends Device {
       return false;
     }
 
-    return getName().equals(device.getName()) &&
-           getType().equals(device.getType()) &&
-           getLaunchCompatibility().equals(device.getLaunchCompatibility()) &&
-           getKey().equals(device.getKey()) &&
-           Objects.equals(getConnectionTime(), device.getConnectionTime()) &&
-           getAndroidDevice().equals(device.getAndroidDevice()) &&
+    return myKey.equals(device.myKey) &&
            Objects.equals(myNameKey, device.myNameKey) &&
+           myType.equals(device.myType) &&
+           myLaunchCompatibility.equals(device.myLaunchCompatibility) &&
+           Objects.equals(myConnectionTime, device.myConnectionTime) &&
+           myName.equals(device.myName) &&
            mySnapshots.equals(device.mySnapshots) &&
-           mySelectDeviceSnapshotComboBoxSnapshotsEnabled == device.mySelectDeviceSnapshotComboBoxSnapshotsEnabled;
+           myAndroidDevice.equals(device.myAndroidDevice);
   }
 
+  @NotNull
   @Override
-  public int hashCode() {
-    return Objects.hash(getName(),
-                        getType(),
-                        getLaunchCompatibility(),
-                        getKey(),
-                        getConnectionTime(),
-                        getAndroidDevice(),
-                        myNameKey,
-                        mySnapshots,
-                        mySelectDeviceSnapshotComboBoxSnapshotsEnabled);
+  public String toString() {
+    return myName;
   }
 }
